# DOOM-RL-speedrun

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
segmentation/experiments/: exp1.ipynb  exp2.ipynb  yolo_train.py
segmentation/src/: prepare_data.py  prepare_yaml.py
